Bug 1744663 - Wasm-EH: fix call_indirect rethrows in Wasm-baseline. r=lth

Co-authored-by: Dmitry Bezhetskov <dbezhetskov@igalia.com>

Changes WebAssembly Exception Handling to accommodate changes to call_indirect.

- A pointer to the caller's tls data is stored in ResumeFromException.
- The unwinder uses that pointer to reload the WasmTlsReg, pinned, and heap registers on exceptional return.
- The stack pointer is adjusted in case of an indirect call.

This fixes failing test cases from WebAssembly exceptions being thrown, caught, and then rethrown in imported functions called
indirectly.

Added a test file with the tests that failed without this patch.

Part of this solution was originally in Core-Wasm-EH-Ion part 1 (bug 1695778), and works well with those patches.

Differential Revision: https://phabricator.services.mozilla.com/D133068